# flows-on-spheres

./: .flake8  .gitignore  01-vonMisesFisher.ipynb  02-HMC.ipynb  03-NormalizingFlow.ipynb  04-FlowHMC.ipynb  README.md  distributions.py  mobius_test.ipynb  models.py  pyproject.toml  transforms.py  utils.py  visualisations.py
demos/: 02-HMC.ipynb  03-NormalizingFlow.ipynb  04-FlowHMC.ipynb  Mobius_S1.ipynb  circle_flow.ipynb  forces_calc.ipynb  hmc_demo.ipynb  mobius_test.ipynb  sphere_flow.ipynb
examples/: multimodal.yaml  s1_config.yaml  s2_config.yaml  s3_config.yaml
examples/circle_flow/mobius/: config.yaml
examples/circle_flow/spline/: config.yaml
examples/exponential_map/: test.py
examples/recursive_flow_s2/: config.yaml
examples/scripts/: circle_flow.py  sphere_flow.py
flows_on_spheres/: abc.py  flows.py  geometry.py  hmc.py  integrators.py  linalg.py  metrics.py  nn.py  prior.py  target.py  train.py  utils.py  visualise.py
flows_on_spheres/scripts/: __init__.py  cli.py  hmc.py  io.py  test.py  train.py  traj.py  viz.py
flows_on_spheres/tests/: test_circular.py  test_geometry.py  test_recursive_s2.py  test_target.py  utils.py
flows_on_spheres/tests/test_transforms/: test_bspline.py  test_bump.py  test_mobius.py  test_projection.py  test_rqspline.py
flows_on_spheres/transforms/: __init__.py  bspline.py  mixture.py  mobius.py  projection.py  rqspline.py  sigmoid.py
src/flows_on_spheres/: distributions.py  flows.py  geometry.py  hmc.py  metrics.py  model.py  prior.py  target.py  transforms.py  utils.py  visualise.py
src/flows_on_spheres/scripts/: cli.py  fhmc.py  hmc.py  test.py  train.py  traj.py  viz.py
vonmises/: distributions.py  flows.py  geometry.py  hmc.py  metrics.py  model.py  models.py  sampling.py  transforms.py  utils.py  visualise.py  viz.py
vonmises/scripts/: cli.py  commands.py  config.yaml  fhmc.py  test.py  train.py  viz.py
vonmises/utils/: __init__.py  geometry.py  optim.py  plot.py  torchops.py
