[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flows_on_spheres"
version = "0.2.0"
description = "Experiments with normalising flows on spheres"
authors = ["marshrossney <17361029+marshrossney@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
torch = "^1.13.1"
pytorch-lightning = "2"
scipy = "^1.10.1"
jsonargparse = "^4.20.1"
ipython = {version = "^8.11.0", optional = true}
jupyterlab = {version = "^3.6.1", optional = true}
ipywidgets = {version = "^8.0.4", optional = true}

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}
flake8 = "^6.0.0"

[tool.poetry.scripts]
fos = "flows_on_spheres.scripts.cli:cli"

[tool.black]
line-length = 79
target-version = ["py310"]
